@@ -7,6 +7,8 @@ v4.6 ??? April 2007
   - Added sipFindClass() and sipFindNamedEnum() to the public API.
   - /TransferThis/ may be specified more than once.
   - Added support for __truediv__ and __itruediv__.
+  - The SIP code generator and module may be built as universal binaried under
+    MacOS/X.
 
 v4.5.2 9th December 2006
   - A bug fix release.
